--- a/requirements-github.txt
+++ b/requirements-github.txt
@@ -6,17 +6,17 @@
 #
 asgiref==3.8.1
     # via django
-build==1.2.1
+build==1.2.2.post1
     # via pip-tools
-certifi==2024.8.30
+certifi==2025.4.26
     # via requests
-charset-normalizer==3.3.2
+charset-normalizer==3.4.2
     # via requests
-click==8.1.7
+click==8.2.1
     # via pip-tools
-coverage==7.6.1
+coverage==7.8.2
     # via pytest-cov
-django==5.0.8
+django==5.0.14
     # via kirppu (pyproject.toml)
 django-environ==0.11.2
     # via kirppu (pyproject.toml)
@@ -24,7 +24,7 @@ django-ipware==5.0.2
     # via kirppu (pyproject.toml)
 django-ratelimit==4.1.0
     # via kirppu (pyproject.toml)
-factory-boy==3.3.1
+factory-boy==3.3.3
     # via kirppu (pyproject.toml)
 faker==19.13.0
     # via
@@ -32,11 +32,11 @@ faker==19.13.0
     #   kirppu (pyproject.toml)
 future==1.0.0
     # via pubcode
-gunicorn==22.0.0
+gunicorn==23.0.0
     # via kirppu (pyproject.toml)
-idna==3.8
+idna==3.10
     # via requests
-iniconfig==2.0.0
+iniconfig==2.1.0
     # via pytest
 mistune==3.0.2
     # via kirppu (pyproject.toml)
@@ -44,7 +44,7 @@ oauthlib==3.2.2
     # via
     #   kirppu (pyproject.toml)
     #   requests-oauthlib
-packaging==24.1
+packaging==25.0
     # via
     #   build
     #   gunicorn
@@ -53,15 +53,15 @@ pillow==10.4.0
     # via kirppu (pyproject.toml)
 pip-tools==7.4.1
     # via kirppu (pyproject.toml)
-pluggy==1.5.0
+pluggy==1.6.0
     # via pytest
-psycopg==3.1.20
+psycopg==3.2.9
     # via kirppu (pyproject.toml)
-psycopg-c==3.1.20
+psycopg-c==3.2.9
     # via psycopg
 pubcode==1.1.0
     # via kirppu (pyproject.toml)
-pyproject-hooks==1.1.0
+pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
@@ -85,15 +85,15 @@ requests==2.32.3
     #   requests-oauthlib
 requests-oauthlib==2.0.0
     # via kirppu (pyproject.toml)
-six==1.16.0
+six==1.17.0
     # via python-dateutil
-sqlparse==0.5.1
+sqlparse==0.5.3
     # via django
-typing-extensions==4.12.2
+typing-extensions==4.13.2
     # via psycopg
-urllib3==2.2.2
+urllib3==2.4.0
     # via requests
-wheel==0.44.0
+wheel==0.45.1
     # via pip-tools
 whitenoise==6.5.0
     # via kirppu (pyproject.toml)
