Update various libraries.
- whitenoise 6.8 possibly fixes random database connection closes.

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -43,9 +43,13 @@ pillow
 pip-tools
     # via kirppu (pyproject.toml)
 pluggy
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-cov
 pubcode
     # via kirppu (pyproject.toml)
+pygments
+    # via pytest
 pyproject-hooks
     # via
     #   build
@@ -62,14 +66,12 @@ pytest-django
     # via kirppu (pyproject.toml)
 pytest-env
     # via kirppu (pyproject.toml)
-python-dateutil
-    # via faker
 python-ipware
     # via django-ipware
-six
-    # via python-dateutil
 sqlparse
     # via django
+tzdata
+    # via faker
 wheel
     # via pip-tools
 whitenoise
