--- a/requirements-github.txt
+++ b/requirements-github.txt
@@ -26,7 +26,7 @@ django-ratelimit==4.1.0
     # via kirppu (pyproject.toml)
 factory-boy==3.3.3
     # via kirppu (pyproject.toml)
-faker==19.13.0
+faker==37.4.2
     # via
     #   factory-boy
     #   kirppu (pyproject.toml)
@@ -38,7 +38,7 @@ idna==3.10
     # via requests
 iniconfig==2.1.0
     # via pytest
-mistune==3.0.2
+mistune==3.1.3
     # via kirppu (pyproject.toml)
 oauthlib==3.2.2
     # via
@@ -49,36 +49,38 @@ packaging==25.0
     #   build
     #   gunicorn
     #   pytest
-pillow==10.4.0
+pillow==11.3.0
     # via kirppu (pyproject.toml)
 pip-tools==7.4.1
     # via kirppu (pyproject.toml)
 pluggy==1.6.0
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-cov
 psycopg==3.2.9
     # via kirppu (pyproject.toml)
 psycopg-c==3.2.9
     # via psycopg
 pubcode==1.1.0
     # via kirppu (pyproject.toml)
+pygments==2.19.2
+    # via pytest
 pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
-pytest==7.4.4
+pytest==8.4.1
     # via
     #   kirppu (pyproject.toml)
     #   pytest-cov
     #   pytest-django
     #   pytest-env
-pytest-cov==4.1.0
+pytest-cov==6.2.1
     # via kirppu (pyproject.toml)
-pytest-django==4.5.2
+pytest-django==4.11.1
     # via kirppu (pyproject.toml)
-pytest-env==1.0.1
+pytest-env==1.1.5
     # via kirppu (pyproject.toml)
-python-dateutil==2.9.0.post0
-    # via faker
 python-ipware==3.0.0
     # via django-ipware
 requests==2.32.4
@@ -87,17 +89,17 @@ requests==2.32.4
     #   requests-oauthlib
 requests-oauthlib==2.0.0
     # via kirppu (pyproject.toml)
-six==1.17.0
-    # via python-dateutil
 sqlparse==0.5.3
     # via django
 typing-extensions==4.14.1
     # via psycopg
+tzdata==2025.2
+    # via faker
 urllib3==2.5.0
     # via requests
 wheel==0.45.1
     # via pip-tools
-whitenoise==6.5.0
+whitenoise==6.9.0
     # via kirppu (pyproject.toml)
 
 # The following packages are considered to be unsafe in a requirements file:
