--- a/kirppu/package.json
+++ b/kirppu/package.json
@@ -30,6 +30,11 @@
     "redom": "^4.1.5",
     "rollup": "^2.79.1"
   },
+  "overrides": {
+    "gulp-coffee": {
+      "merge": "2.1.1"
+    }
+  },
   "engines": {
     "node": ">=14.0.0"
   }
