Replace jquery.jeditable with Malle.
- Change vendor apis to use plain text responses as they are not really
html which is the default in HttpResponse.

--- a/kirppu/package.json
+++ b/kirppu/package.json
@@ -12,6 +12,7 @@
   "license": "unknown",
   "private": true,
   "dependencies": {
+    "@deltablot/malle": "^2.7.0",
     "@rollup/plugin-sucrase": "^4.0.4",
     "bootstrap": "^3.4.1",
     "cssnano": "^7.0.4",
