--- a/requirements-github.txt
+++ b/requirements-github.txt
@@ -6,15 +6,15 @@
 #
 asgiref==3.9.1
     # via django
-build==1.2.2.post1
+build==1.3.0
     # via pip-tools
-certifi==2025.7.14
+certifi==2025.8.3
     # via requests
 charset-normalizer==3.4.2
     # via requests
 click==8.2.1
     # via pip-tools
-coverage==7.9.2
+coverage==7.10.1
     # via pytest-cov
 django==5.1.11
     # via kirppu (pyproject.toml)
@@ -26,7 +26,7 @@ django-ratelimit==4.1.0
     # via kirppu (pyproject.toml)
 factory-boy==3.3.3
     # via kirppu (pyproject.toml)
-faker==37.4.2
+faker==37.5.3
     # via
     #   factory-boy
     #   kirppu (pyproject.toml)
@@ -51,7 +51,7 @@ packaging==25.0
     #   pytest
 pillow==11.3.0
     # via kirppu (pyproject.toml)
-pip-tools==7.4.1
+pip-tools==7.5.0
     # via kirppu (pyproject.toml)
 pluggy==1.6.0
     # via
