Fix test volume mount on postgres 18+
As required by its new initialization.
See https://github.com/docker-library/postgres/pull/1259

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
   postgres:
     image: postgres
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - postgres-data:/var/lib/postgresql
     environment:
       POSTGRES_USER: kirppu
       POSTGRES_PASSWORD: secret
