--- a/requirements-github.txt
+++ b/requirements-github.txt
@@ -6,15 +6,15 @@
 #
 asgiref==3.11.0
     # via django
-build==1.3.0
+build==1.4.0
     # via pip-tools
-certifi==2025.11.12
+certifi==2026.1.4
     # via requests
 charset-normalizer==3.4.4
     # via requests
 click==8.3.1
     # via pip-tools
-coverage==7.13.0
+coverage==7.13.1
     # via pytest-cov
 django==5.1.15
     # via kirppu (pyproject.toml)
@@ -44,11 +44,12 @@ oauthlib==3.2.2
     # via
     #   kirppu (pyproject.toml)
     #   requests-oauthlib
-packaging==25.0
+packaging==26.0
     # via
     #   build
     #   gunicorn
     #   pytest
+    #   wheel
 pillow==11.3.0
     # via kirppu (pyproject.toml)
 pip-tools==7.5.2
@@ -89,15 +90,15 @@ requests==2.32.5
     #   requests-oauthlib
 requests-oauthlib==2.0.0
     # via kirppu (pyproject.toml)
-sqlparse==0.5.4
+sqlparse==0.5.5
     # via django
 typing-extensions==4.15.0
     # via psycopg
 tzdata==2025.3
     # via faker
-urllib3==2.6.2
+urllib3==2.6.3
     # via requests
-wheel==0.45.1
+wheel==0.46.3
     # via pip-tools
 whitenoise==6.9.0
     # via kirppu (pyproject.toml)
