--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           python-version: '3.13'
           cache: pip
-          cache-dependency-path: constraints.txt requirements-dev.txt
+          cache-dependency-path: requirements-dev.txt
       - run: pip install -r requirements-dev.txt
       - run: py.test -vvv --cov . --doctest-modules
         env:
