--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,6 @@ dev = [
     "pytest-django~=4.11.0",
     "pytest-env~=1.1.0",
     "pytest-cov~=6.0",
-    "pip-tools~=7.3",
 ]
 
 
@@ -75,3 +74,6 @@ include = [
     "kompassi_crowd",
     "kompassi_oauth2",
 ]
+
+[tool.uv]
+package = false
